--- a/templates/components/BigButtons.html.twig
+++ b/templates/components/BigButtons.html.twig
@@ -1,6 +1,6 @@
 <div class="big-button">
     <div class="icon">
-        {% include 'composents/Icon.html.twig' with { 'selected_icon': iconName, "size": "sm" } %}
+        {% include 'components/Icon.html.twig' with { 'selected_icon': iconName, "size": "sm" } %}
     </div>
     <span class="text">{{ text }}</span>
 </div>
