feat: Quick Action

--- a/templates/components/QuickActions.html.twig
+++ b/templates/components/QuickActions.html.twig
@@ -1,6 +1,6 @@
 <div class="quick-action {{class|default('')}}">
     <span class="icon">
-        {% include 'composents/Icon.html.twig' with { 'iconName': iconName, "size": "sm" } %}
+        {% include 'components/Icon.html.twig' with { 'iconName': iconName, "size": "sm" } %}
     </span>
     <span class="text">{{ text|default("Text") }}</span>
 </div>
