test: :sparkles: Components test

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/variables.css') }}">
             <link rel="stylesheet" href="{{ asset('styles/page.css') }}">
-            <link rel="stylesheet" href="{{ asset('styles/composents.css') }}">
+            <link rel="stylesheet" href="{{ asset('styles/components.css') }}">
         {% endblock %}
 
         {% block javascripts %}
