--- a/templates/components/Link.html.twig
+++ b/templates/components/Link.html.twig
@@ -1,3 +1,3 @@
-<a href="{{ href }}" class="link-component {{ class|default('') }} {% if variant == 'blue' %}link-component-blue{% endif %}" target="{{ target|default('_self') }}">
+<a href="{{ href }}" class="link-component {{ class|default('') }} {% if variant|default("") == 'blue' %}link-component-blue{% endif %}" target="{{ target|default('_self') }}">
     {{ text|default('Link') }}
 </a>
